--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     // Dagger Hilt
     implementation("com.google.dagger:hilt-android:$daggerHiltVersion")
     kapt("com.google.dagger:hilt-android-compiler:$daggerHiltVersion")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     // Compose Navigation
     implementation("androidx.navigation:navigation-compose:$nav_version")
